# aspire-linting-example

./: README.md  apphost.cs  apphost.run.json
app/: .dockerignore  main.py  pyproject.toml
app/src/app/: forecast_generator.py  main.py  telemetry.py
app/tests/unit/: test_forecast_generator.py
frontend/: eslint.config.js
