[project]
name = "FastAPI-starter"
version = "0.1.0"
description = "FastAPI starter"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-redis>=0.59b0",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]
